<resources>
    <string name="app_name">Sensor Scanner</string>

    <string name="main_title">Sensors</string>

    <string name="sensor_type_label">Type: %s</string>
    <string name="sensor_name_label">Name: %s</string>
    <string name="sensor_vendor_label">Vendor: %s</string>

    <string name="expand_button_desc">Click to see more sensors</string>


    <string name="detail_title">Sensor Details</string>

    <string name="detail_type_label">Type</string>
    <string name="detail_string_type_label">String Type</string>
    <string name="detail_name_label">Name</string>
    <string name="detail_vendor_label">Vendor</string>
    <string name="detail_version_label">Version</string>
    <string name="detail_max_range_label">Maximum Range</string>
    <string name="detail_resolution_label">Resolution</string>
    <string name="detail_power_label">Power consumption</string>
    <string name="detail_min_delay_label">Minimum Delay</string>
    <string name="detail_max_delay_label">Maximum Delay</string>
    <string name="detail_reporting_mode_label">Reporting Mode</string>
    <string name="detail_wakeup_label">Wake-Up</string>
    <string name="detail_dynamic_label">Dynamic</string>
    <string name="detail_id_label">ID</string>

    <!-- the names of the sensor types -->
    <string name="sensor_type_1">Accelerometer</string>
    <string name="sensor_type_2">Magnetic Field</string>
    <string name="sensor_type_3">Orientation (Deprecated)</string>
    <string name="sensor_type_4">Gyroscope</string>
    <string name="sensor_type_5">Light</string>
    <string name="sensor_type_6">Pressure</string>
    <string name="sensor_type_7">Temperature (Deprecated)</string>
    <string name="sensor_type_8">Proximity</string>
    <string name="sensor_type_9">Gravity</string>
    <string name="sensor_type_10">Linear Acceleration</string>
    <string name="sensor_type_11">Rotation Vector</string>
    <string name="sensor_type_12">Relative Humidity</string>
    <string name="sensor_type_13">Ambient Temperature</string>
    <string name="sensor_type_14">Magnetic Field Uncalibrated</string>
    <string name="sensor_type_15">Game Rotation Vector</string>
    <string name="sensor_type_16">Gyroscope Uncalibrated</string>
    <string name="sensor_type_17">Significant Motion</string>
    <string name="sensor_type_18">Step Detector</string>
    <string name="sensor_type_19">Step Counter</string>
    <string name="sensor_type_20">Geomagnetic Rotation Vector</string>
    <string name="sensor_type_21">Heart Rate</string>
    <string name="sensor_type_22">Tilt Detector</string>
    <string name="sensor_type_23">Wake Gesture</string>
    <string name="sensor_type_24">Glance Gesture</string>
    <string name="sensor_type_25">Pick Up Gesture</string>
    <string name="sensor_type_26">Wrist Tilt Gesture</string>
    <string name="sensor_type_27">Device Orientation</string>
    <string name="sensor_type_28">Pose 6DOF</string>
    <string name="sensor_type_29">Stationary Detect</string>
    <string name="sensor_type_30">Motion Detect</string>
    <string name="sensor_type_31">Heart Beat</string>
    <string name="sensor_type_32">Dynamic Sensor Meta</string>
    <string name="sensor_type_33">Low Latency Off-body Detect</string>
    <string name="sensor_type_34">Reserved (34)</string>
    <string name="sensor_type_35">Accelerometer Uncalibrated</string>
    <string name="sensor_type_36">Hinge Angle</string>
    <string name="sensor_type_37">Head Tracker</string>
    <string name="sensor_type_38">Accelerometer Limited Axes</string>
    <string name="sensor_type_39">Reserved (39)</string>
    <string name="sensor_type_40">Accelerometer Limited Axes Uncalibrated</string>
    <string name="sensor_type_41">Gyroscope Limited Axes Uncalibrated</string>
    <string name="sensor_type_42">Heading</string>

    <string name="sensor_type_vendor">Vendor-Specific Sensor</string>
    <string name="sensor_type_unknown">Unknown Sensor Type</string>
</resources>