<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sensor_details_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="16dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView android:text="@string/detail_name_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailName" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_vendor_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailVendor" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_type_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailType" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_string_type_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailStringType" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_version_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailVersion" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_max_range_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailMaxRange" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_resolution_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailResolution" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_power_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailPower" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_min_delay_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailMinDelay" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_max_delay_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailMaxDelay" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_reporting_mode_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailReportingMode" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_wakeup_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailIsWakeup" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_dynamic_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailIsDynamic" style="@style/DetailValue"/>

            <TextView android:text="@string/detail_id_label" style="@style/DetailLabel"/>
            <TextView android:id="@+id/tvDetailId" style="@style/DetailValue"/>

        </GridLayout>
    </LinearLayout>
</ScrollView>